# snek-rs

./: .gitignore  Cargo.toml  README.md  launch.json
.circleci/: config.yml
src/: lib.rs  main.rs
src/core/: apple.rs  board.rs  cell.rs  events.rs  mod.rs  position.rs  scoreboard.rs  snek.rs  state.rs  walls.rs
src/core/snek/: death.rs  direction.rs  mod.rs  segment.rs  slither.rs
src/gui/: main.rs  mod.rs
src/tui/: mod.rs  theme.rs
src/tui/views/: game.rs  mod.rs
src/tui/views/game/: mod.rs
src/tui/views/high_scores/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: mod.rs  tail.rs
xtask/src/tools/: cargo.rs  mod.rs  print.rs  runner.rs
